<resources>
    <string name="app_name">에이치스케치</string>
    <string name="nav_tab1">홈</string>
    <string name="nav_tab2">그리기</string>
    <string name="nav_tab3">Option</string>
    <string name="picture_title1">최고 평가 작품</string>
    <string name="picture_title2">신규 작품</string>
    <string name="picture_title3">추천 작품</string>
    <string name="picture_ratio">3:4</string>
    <string name="picture_vertical_ratio">5:2</string>
    <string name="picture_mainimage_ratio">16:9</string>
    <string name="drawing_pensize_unit">pt</string>
    <string name="drawing_penalpha_unit">%</string>
    <string name="transition_name">activity_change_transition</string>
    <string name="picture_save_success">작품이 갤러리에 저장되었습니다</string>
    <string name="picture_save_failed">작품 저장을 실패하였습니다</string>
    <string name="search_query_hint">작품 제목, 내용 등을 검색</string>
    <string name="drawing_upload">작품 정보</string>
    <string name="drawing_upload_title_hint">작품 제목</string>
    <string name="drawing_upload_description_hint">작품 설명</string>
    <string name="drawing_upload_botton_text">업로드</string>
    <string name="drawing_upload_gallery_botton_text">저장</string>
    <string name="drawing_upload_shared_botton_text">공유</string>
    <string name="picture_upload_success">업로드 완료, 새로고침 후 반영됩니다</string>
    <string name="picture_upload_failed">업로드 실패</string>
    <string name="http_connect_failed">서버와의 연결을 할 수 없습니다</string>
    <string name="compress_int_unit_1">억</string>
    <string name="compress_int_unit_2">만</string>
    <string name="compress_int_unit_3">천</string>
    <string name="search_result_null">일치하는 결과가 없습니다</string>
    <string name="admin_email">eqrw105@naver.com</string>
    <string name="setting_notice">공지사항</string>
    <string name="setting_version">버전확인</string>
    <string name="setting_shared">공유하기</string>
    <string name="setting_mypicture">작품관리</string>
    <string name="setting_store">스토어</string>
    <string name="setting_policy">개인정보 처리방침</string>
    <string name="setting_termsofservice">이용약관</string>
    <string name="setting_inquiry">문의하기</string>
    <string name="setting_logout">로그아웃</string>
    <string name="setting_leave">회원탈퇴</string>
    <string name="drawing_upload_isfile">내 작품 중 중복되는 제목이 존재합니다</string>
    <string name="picture_detail_menu_report_title">작품 신고</string>
    <string name="picture_detail_menu_remove_title">작품 삭제</string>
    <string name="mypicture_upload_cancel_menu_title">업로드 취소</string>
    <string name="picture_detail_result_null">존재하지 않는 작품 입니다</string>
    <string name="picture_remove_success">작품이 삭제되었습니다</string>
    <string name="picture_remove_user_not_admin">작품 게시자가 아닙니다</string>
    <string name="picture_report_success">신고가 접수되었습니다</string>
    <string name="internet_not_connected">인터넷 연결을 확인하세요</string>
    <string name="blank">공백을 채워주세요</string>
    <string name="favorite_status_true_text">회원님 외</string>
    <string name="notice_detail_result_null">존재하지 않는 공지사항 입니다</string>
    <string name="notice_importance_normal">일반공지</string>
    <string name="notice_importance_important">중요공지</string>
    <string name="notice_importance_ungent">긴급공지</string>
    <string name="request_policy_title">개인정보 처리방침 및 이용약관 동의</string>
    <string name="request_policy_agree">동의</string>
    <string name="request_policy_unagree">비동의</string>
    <string name="request_policy_notcheck">개인정보 처리방침 및 이용약관을 동의하세요</string>
    <string name="leave_agree">모든 내용에 동의합니다</string>
    <string name="leave_notcheck">탈퇴 내용을 동의하세요</string>
    <string name="leave_description">이메일, 이름, 게시물 정보 등 계정과 연관된 모든 데이터가 삭제됩니다\n\n탈퇴 후 이용기록은 신상 확인이 어려워 수정 또는 복구 등 재사용이 불가합니다</string>
    <string name="leave_title">회원탈퇴 신청 전 안내 사항을 반드시 확인해주세요</string>
    <string name="version_update">최신버전 업데이트가 필요합니다</string>
    <string name="app_share_text">같이 할 사람 급구!!\n</string>
    <string name="store_already_owned">이미 구매한 상품입니다</string>
    <string name="store_canceled">구매를 취소하였습니다</string>
    <string name="store_find_failed">상품을 찾을 수 없습니다</string>
    <string name="donate_thankyou">정말 감사합니다ㅠㅠ</string>
    <string name="store_remove_admob_success">앱 재접속 이후 반영됩니다</string>
    <string name="mypicture_agree">게시중</string>
    <string name="mypicture_unagree">제한됨</string>
</resources>