<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_medium">

    <Space
        android:id="@+id/drawing_upload_space_center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/drawing_upload_constraintlayout_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/drawing_upload_imageview_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?selectableItemBackgroundBorderless"
        android:clickable="true"
        android:src="@drawable/baseline_cancel_white_36"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="@color/menu_button_bg" />

    <androidx.cardview.widget.CardView
        android:id="@+id/drawing_upload_cardview_picture"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/margin_regular"
        android:layout_marginBottom="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/picture_image_radius"
        app:layout_constraintBottom_toTopOf="@+id/drawing_upload_constraintlayout_bottom"
        app:layout_constraintDimensionRatio="@string/picture_ratio"
        app:layout_constraintEnd_toStartOf="@+id/drawing_upload_space_center"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:id="@+id/drawing_upload_imageview_picture"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/drawing_upload"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textsize_large"
        app:layout_constraintBottom_toBottomOf="@+id/drawing_upload_imageview_close"
        app:layout_constraintEnd_toStartOf="@+id/drawing_upload_imageview_close"
        app:layout_constraintStart_toStartOf="@+id/drawing_upload_edittext_title"
        app:layout_constraintTop_toTopOf="@+id/drawing_upload_imageview_close" />

    <EditText
        android:id="@+id/drawing_upload_edittext_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_regular"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/view_white_round"
        android:hint="@string/drawing_upload_title_hint"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLength="20"
        android:maxLines="1"
        android:padding="@dimen/padding_regular"
        android:textColor="@color/textPrimaryDark"
        android:textColorHint="@color/hintPrimary"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/drawing_upload_space_center"
        app:layout_constraintTop_toBottomOf="@+id/drawing_upload_imageview_close" />

    <EditText
        android:id="@+id/drawing_upload_edittext_description"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@drawable/view_white_round"
        android:gravity="top"
        android:hint="@string/drawing_upload_description_hint"
        android:inputType="textCapSentences|textAutoCorrect"
        android:maxLength="100"
        android:padding="@dimen/padding_regular"
        android:textColor="@color/textPrimaryDark"
        android:textColorHint="@color/hintPrimary"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintBottom_toBottomOf="@+id/drawing_upload_cardview_picture"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/drawing_upload_edittext_title"
        app:layout_constraintTop_toBottomOf="@+id/drawing_upload_edittext_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/drawing_upload_constraintlayout_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/drawing_upload_button_gallery"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/baseline_download_white_24"
            android:text="@string/drawing_upload_gallery_botton_text"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/textsize_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/drawing_upload_button_shared"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/drawing_upload_button_shared"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:drawableTop="@drawable/baseline_share_white_24"
            android:text="@string/drawing_upload_shared_botton_text"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/textsize_regular"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/drawing_upload_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_regular"
            android:background="@drawable/upload_botton_ripple_round"
            android:text="@string/drawing_upload_botton_text"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/textsize_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/drawing_upload_button_gallery"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>