<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/padding_medium">

    <TextView
        android:id="@+id/request_policy_textview_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/request_policy_title"
        android:gravity="center"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textsize_large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_policy_textview_title">

        <Button
            android:id="@+id/request_policy_button_policy"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            android:background="@drawable/request_policy_button_policy_ripple"
            android:text="@string/setting_policy"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/textsize_regular" />

        <Button
            android:id="@+id/request_policy_button_termsofservice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@drawable/request_policy_button_tersmofservice_ripple"
            android:text="@string/setting_termsofservice"
            android:textColor="@color/textPrimary"
            android:textSize="@dimen/textsize_regular" />


    </LinearLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/request_policy_constraintlayout_webview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <WebView
            android:id="@+id/request_policy_webView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <CheckBox
        android:id="@+id/request_policy_checkbox_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/setting_policy"
        android:buttonTint="@color/textPrimary"
        android:textColor="@color/textPrimary"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintTop_toBottomOf="@+id/request_policy_constraintlayout_webview" />


    <CheckBox
        android:id="@+id/request_policy_checkbox_termsofservice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/setting_termsofservice"
        android:textColor="@color/textPrimary"
        android:buttonTint="@color/textPrimary"
        android:textSize="@dimen/textsize_medium"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_policy_checkbox_policy" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/request_policy_checkbox_termsofservice">

        <Button
            android:id="@+id/request_policy_button_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:background="@drawable/primacy_button_ripple_round"
            android:text="@string/request_policy_agree"
            android:layout_marginEnd="@dimen/margin_regular"
            android:textColor="@color/textPrimaryDark"
            android:textSize="@dimen/textsize_medium" />

        <Button
            android:id="@+id/request_policy_button_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/request_policy_unagree"
            android:layout_marginStart="@dimen/margin_regular"
            android:background="@drawable/primacy_button_ripple_round"
            android:textColor="@color/textPrimaryDark"
            android:textSize="@dimen/textsize_medium" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>