<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LeaveActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/leave_constraintlayout_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/padding_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/leave_imageview_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?selectableItemBackgroundBorderless"
            android:clickable="true"
            android:src="@drawable/baseline_arrow_back_white_36"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/leave_constraintlayout_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/padding_medium">

            <TextView
                android:id="@+id/leave_textview_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/setting_leave"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/textsize_large"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/leave_textview_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/leave_title"
                android:textColor="@color/Gray_100"
                android:textSize="@dimen/textsize_medium"
                app:layout_constraintTop_toBottomOf="@+id/leave_textview_top"
                tools:layout_editor_absoluteX="10dp" />

            <TextView
                android:id="@+id/leave_textview_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/leave_description"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/textsize_medium"
                app:layout_constraintTop_toBottomOf="@+id/leave_textview_title" />


            <CheckBox
                android:id="@+id/leave_checkbox_agree"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:buttonTint="@color/textPrimary"
                android:text="@string/leave_agree"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/textsize_medium"
                app:layout_constraintTop_toBottomOf="@+id/leave_textview_description" />

            <Button
                android:id="@+id/leave_button_agree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_medium"
                android:text="@string/setting_leave"
                android:textColor="@color/textPrimary"
                android:textSize="@dimen/textsize_medium"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/leave_checkbox_agree" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>